--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             font-family: 'Minecraft', monospace;
         }
     </style>
+    <meta name="6a97888e-site-verification" content="11b2be65e5c154be203e52607169aa50">
 </head>
 <body>
     <div class="container">
