--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
     <meta name="6a97888e-site-verification" content="11b2be65e5c154be203e52607169aa50">
 </head>
 <body>
+    <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e2" data-zoneid="5711710"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
     <div class="container">
         <div class="title">Kodu Girin: '<span id="code">0000</span>'</div>
         <div class="code-box" id="inputBox"></div>
