--- a/index.html
+++ b/index.html
@@ -1,116 +1,17 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/minecraft-3" rel="stylesheet">
-    <title>Kodu Girin</title>
-    <style>
-        body {
-            background: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: 'Minecraft', monospace;
-        }
-        .container {
-            background: #fff;
-            border-radius: 16px;
-            box-shadow: 0 4px 24px rgba(0,0,0,0.12);
-            padding: 32px 24px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .title {
-            font-size: 1.3rem;
-            margin-bottom: 24px;
-            font-weight: 500;
-            text-align: center;
-            font-family: 'Minecraft', monospace;
-        }
-        .code-box {
-            font-size: 2rem;
-            font-family: 'Minecraft', monospace;
-            background: #e9ecef;
-            border-radius: 8px;
-            padding: 8px 24px;
-            margin-bottom: 24px;
-            min-width: 120px;
-            text-align: center;
-            letter-spacing: 8px;
-        }
-        .keypad {
-            display: grid;
-            grid-template-columns: repeat(3, 60px);
-            gap: 12px;
-            margin-bottom: 12px;
-        }
-        .btn {
-            background: #f8f9fa;
-            border: none;
-            border-radius: 8px;
-            font-size: 1.5rem;
-            padding: 16px 0;
-            cursor: pointer;
-            transition: background 0.2s;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.06);
-            font-family: 'Minecraft', monospace;
-        }
-        .btn:active {
-            background: #dee2e6;
-        }
-        .btn-tick {
-            background: #4caf50;
-            color: #fff;
-            font-size: 2rem;
-            font-family: 'Minecraft', monospace;
-        }
-    </style>
+    <title>PornScape</title>
     <meta name="6a97888e-site-verification" content="11b2be65e5c154be203e52607169aa50">
 </head>
 <body>
+    <h1>PornScape</h1>
+    <!-- Ads -->
     <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5711710"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-    <div class="container">
-        <div class="title">Kodu Girin: '<span id="code">0000</span>'</div>
-        <div class="code-box" id="inputBox"></div>
-        <div class="keypad">
-            <button class="btn" onclick="pressNum('1')">1</button>
-            <button class="btn" onclick="pressNum('2')">2</button>
-            <button class="btn" onclick="pressNum('3')">3</button>
-            <button class="btn" onclick="pressNum('4')">4</button>
-            <button class="btn" onclick="pressNum('5')">5</button>
-            <button class="btn" onclick="pressNum('6')">6</button>
-            <button class="btn" onclick="pressNum('7')">7</button>
-            <button class="btn" onclick="pressNum('8')">8</button>
-            <button class="btn" onclick="pressNum('9')">9</button>
-            <div></div>
-            <button class="btn" onclick="pressNum('0')">0</button>
-            <button class="btn btn-tick" onclick="generateCode()">✔️</button>
-        </div>
-    </div>
-    <script>
-        let input = "";
-        document.getElementById("inputBox").textContent = "";
-        function pressNum(num) {
-            if (input.length < 4) {
-                input += num;
-                document.getElementById("inputBox").textContent = input;
-            }
-        }
-        function generateCode() {
-            let code = "";
-            for (let i = 0; i < 4; i++) {
-                code += Math.floor(Math.random() * 10);
-            }
-            document.getElementById("code").textContent = code;
-            input = "";
-            document.getElementById("inputBox").textContent = "";
-        }
-    </script>
+    <ins class="eas6a97888e2" data-zoneid="5711710"></ins> 
+    <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 </body>
 </html>
