--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/minecraft-3" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>PornScape</title>
     <meta name="6a97888e-site-verification" content="11b2be65e5c154be203e52607169aa50">
 </head>
