--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>PornScape</h1>
     <!-- Ads -->
-    <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+    <script id="ad-bottom" async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
     <ins class="eas6a97888e2" data-zoneid="5711710"></ins> 
     <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 </body>
