--- a/index.html
+++ b/index.html
@@ -3,16 +3,171 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.cdnfonts.com/css/minecraft-3" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>PornScape</title>
     <meta name="6a97888e-site-verification" content="11b2be65e5c154be203e52607169aa50">
+    <title>PornScape</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>PornScape</h1>
-    <!-- Ads -->
-    <script id="ad-bottom" async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
-    <ins class="eas6a97888e2" data-zoneid="5711710"></ins> 
-    <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#"><i class="fas fa-play-circle me-2"></i>Lorem Ipsum</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#home"><i class="fas fa-home me-1"></i>Anasayfa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#videos"><i class="fas fa-video me-1"></i>Videolar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#login"><i class="fas fa-sign-in-alt me-1"></i>Giriş Yap</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#register"><i class="fas fa-user-plus me-1"></i>Kayıt Ol</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h1 class="display-4 mb-4">Lorem Ipsum Video Platformu</h1>
+                    <p class="lead mb-4">En kaliteli videoları keşfedin ve paylaşın. Modern tasarım ve kullanıcı dostu arayüz ile video deneyiminizi yaşayın.</p>
+                    <a href="#videos" class="btn btn-custom btn-lg"><i class="fas fa-play me-2"></i>Videoları İzle</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Videos Section -->
+    <section id="videos" class="py-5">
+        <div class="container">
+            <h2 class="section-title">Popüler Videolar</h2>
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="video-card">
+                        <div class="video-thumbnail"></div>
+                        <h5>Video Başlığı 1</h5>
+                        <p class="text-muted">Bu video hakkında kısa açıklama metni yer alacak.</p>
+                        <button class="btn btn-custom btn-sm"><i class="fas fa-play me-1"></i>İzle</button>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="video-card">
+                        <div class="video-thumbnail"></div>
+                        <h5>Video Başlığı 2</h5>
+                        <p class="text-muted">Bu video hakkında kısa açıklama metni yer alacak.</p>
+                        <button class="btn btn-custom btn-sm"><i class="fas fa-play me-1"></i>İzle</button>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="video-card">
+                        <div class="video-thumbnail"></div>
+                        <h5>Video Başlığı 3</h5>
+                        <p class="text-muted">Bu video hakkında kısa açıklama metni yer alacak.</p>
+                        <button class="btn btn-custom btn-sm"><i class="fas fa-play me-1"></i>İzle</button>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="video-card">
+                        <div class="video-thumbnail"></div>
+                        <h5>Video Başlığı 4</h5>
+                        <p class="text-muted">Bu video hakkında kısa açıklama metni yer alacak.</p>
+                        <button class="btn btn-custom btn-sm"><i class="fas fa-play me-1"></i>İzle</button>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="video-card">
+                        <div class="video-thumbnail"></div>
+                        <h5>Video Başlığı 5</h5>
+                        <p class="text-muted">Bu video hakkında kısa açıklama metni yer alacak.</p>
+                        <button class="btn btn-custom btn-sm"><i class="fas fa-play me-1"></i>İzle</button>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="video-card">
+                        <div class="video-thumbnail"></div>
+                        <h5>Video Başlığı 6</h5>
+                        <p class="text-muted">Bu video hakkında kısa açıklama metni yer alacak.</p>
+                        <button class="btn btn-custom btn-sm"><i class="fas fa-play me-1"></i>İzle</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Login/Register Section -->
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="video-card">
+                        <h3><i class="fas fa-sign-in-alt me-2"></i>Giriş Yap</h3>
+                        <form>
+                            <div class="mb-3">
+                                <input type="email" class="form-control bg-dark text-white border-secondary" placeholder="E-posta">
+                            </div>
+                            <div class="mb-3">
+                                <input type="password" class="form-control bg-dark text-white border-secondary" placeholder="Şifre">
+                            </div>
+                            <button type="submit" class="btn btn-custom">Giriş Yap</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="video-card">
+                        <h3><i class="fas fa-user-plus me-2"></i>Kayıt Ol</h3>
+                        <form>
+                            <div class="mb-3">
+                                <input type="text" class="form-control bg-dark text-white border-secondary" placeholder="Ad Soyad">
+                            </div>
+                            <div class="mb-3">
+                                <input type="email" class="form-control bg-dark text-white border-secondary" placeholder="E-posta">
+                            </div>
+                            <div class="mb-3">
+                                <input type="password" class="form-control bg-dark text-white border-secondary" placeholder="Şifre">
+                            </div>
+                            <button type="submit" class="btn btn-custom">Kayıt Ol</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5><i class="fas fa-play-circle me-2"></i>Lorem Ipsum</h5>
+                    <p class="text-muted">En kaliteli video platformu</p>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <p class="text-muted">&copy; 2025 PornScape. Tüm hakları saklıdır.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Ad Script -->
+    <div class="ad-container">
+        <script id="ad-bottom" async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>
+        <ins class="eas6a97888e2" data-zoneid="5711710"></ins>
+        <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
