--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +7,13 @@
     <title>PornScape</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="#"><i class="fas fa-play-circle me-2"></i>Lorem Ipsum</a>
+            <a class="navbar-brand" href="#"><i class="fas fa-play-circle me-2"></i>PornScape</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -36,12 +36,19 @@
         </div>
     </nav>
 
+    <!-- Top Ad Script -->
+    <div class="ad-container ad-top">
+        <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>
+        <ins class="eas6a97888e2" data-zoneid="5711710"></ins>
+        <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+    </div>
+
     <!-- Hero Section -->
     <section id="home" class="hero-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h1 class="display-4 mb-4">Lorem Ipsum Video Platformu</h1>
+                    <h1 class="display-4 mb-4">PornScape Video Platformu</h1>
                     <p class="lead mb-4">En kaliteli videoları keşfedin ve paylaşın. Modern tasarım ve kullanıcı dostu arayüz ile video deneyiminizi yaşayın.</p>
                     <a href="#videos" class="btn btn-custom btn-lg"><i class="fas fa-play me-2"></i>Videoları İzle</a>
                 </div>
@@ -150,20 +157,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5><i class="fas fa-play-circle me-2"></i>Lorem Ipsum</h5>
+                    <h5><i class="fas fa-play-circle me-2"></i>PornScape</h5>
                     <p class="text-muted">En kaliteli video platformu</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="text-muted">&copy; 2025 PornScape. Tüm hakları saklıdır.</p>
+                    <p class="text-muted">&copy; 2024 PornScape. Tüm hakları saklıdır.</p>
                 </div>
             </div>
         </div>
     </footer>
 
-    <!-- Ad Script -->
-    <div class="ad-container">
-        <script id="ad-bottom" async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>
+    <!-- Bottom Ad Script -->
+    <div class="ad-container ad-bottom">
+        <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>
         <ins class="eas6a97888e2" data-zoneid="5711710"></ins>
+        <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+    </div>
+
+    <!-- Left Side Ad Script -->
+    <div class="ad-sidebar ad-left">
+        <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>
+        <ins class="eas6a97888e2" data-zoneid="5711714"></ins>
+        <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+    </div>
+
+    <!-- Right Side Ad Script -->
+    <div class="ad-sidebar ad-right">
+        <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>
+        <ins class="eas6a97888e2" data-zoneid="5711714"></ins>
         <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
     </div>
 
