--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6">
                     <div class="video-card">
-                        <div class="video-thumbnail"></div>
+                        <div class="video-thumbnail"><img src="image.png"></div>
                         <h5>Video Başlığı 1</h5>
                         <p class="text-muted">Bu video hakkında kısa açıklama metni yer alacak.</p>
                         <button class="btn btn-custom btn-sm"><i class="fas fa-play me-1"></i>İzle</button>
