--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="video-card">
-                        <div class="video-thumbnail"></div>
+                        <div class="video-thumbnail"><img src="image.png"></div>
                         <h5>Video Başlığı 2</h5>
                         <p class="text-muted">Bu video hakkında kısa açıklama metni yer alacak.</p>
                         <button class="btn btn-custom btn-sm"><i class="fas fa-play me-1"></i>İzle</button>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="video-card">
-                        <div class="video-thumbnail"></div>
+                        <div class="video-thumbnail"><img src="image.png"></div>
                         <h5>Video Başlığı 3</h5>
                         <p class="text-muted">Bu video hakkında kısa açıklama metni yer alacak.</p>
                         <button class="btn btn-custom btn-sm"><i class="fas fa-play me-1"></i>İzle</button>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="video-card">
-                        <div class="video-thumbnail"></div>
+                        <div class="video-thumbnail"><img src="image.png"></div>
                         <h5>Video Başlığı 4</h5>
                         <p class="text-muted">Bu video hakkında kısa açıklama metni yer alacak.</p>
                         <button class="btn btn-custom btn-sm"><i class="fas fa-play me-1"></i>İzle</button>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="video-card">
-                        <div class="video-thumbnail"></div>
+                        <div class="video-thumbnail"><img src="image.png"></div>
                         <h5>Video Başlığı 5</h5>
                         <p class="text-muted">Bu video hakkında kısa açıklama metni yer alacak.</p>
                         <button class="btn btn-custom btn-sm"><i class="fas fa-play me-1"></i>İzle</button>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="video-card">
-                        <div class="video-thumbnail"></div>
+                        <div class="video-thumbnail"><img src="image.png"></div>
                         <h5>Video Başlığı 6</h5>
                         <p class="text-muted">Bu video hakkında kısa açıklama metni yer alacak.</p>
                         <button class="btn btn-custom btn-sm"><i class="fas fa-play me-1"></i>İzle</button>
